Fixed weird double scroll issue.

--- a/src/defaults.css
+++ b/src/defaults.css
@@ -3,8 +3,3 @@ html, body {
     height: 100vh;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-
-main { 
-    background-attachment: fixed;
-    background-image: url('../src/media/newport-sunset-blur.png');
-}
